[package]
name = "LatexImgGen-lib"
version = "0.1.0"
authors = ["Emily Traynor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mathjax = "0.1.1"

exclude = [
    "imgfolder",
    "LatexImgGen-lib-test",
    "dioxusTest.rs",
    "README.md",
]