[package]
name = "LatexImgGen-lib"
version = "0.1.0"
authors = ["Emily Traynor"]
description = "A rust crate for generating Latex images of equations with an edition number to avoid cache flushing and timestamp attributes"
readme = "README.md"
repository = "https://github.com/emily0622/LatexImgGen"
license = "Apache-2.0"
keywords = ["latex", "image","cache flushing"]

[dependencies]
mathjax = "0.1.1"
